--- a/frontend/src/app/menu/menu.page.scss
+++ b/frontend/src/app/menu/menu.page.scss
@@ -1,6 +1,13 @@
 ion-content {
   --background: #121212;
---padding-bottom: 100px !important;
+  --padding-bottom: 100px !important;
+}
+
+:host {
+  ion-content {
+    position: relative;
+    z-index: 1;
+  }
 }
 
 .custom-toolbar {
