UI Polish: Improved mobile tab bar stability

--- a/frontend/src/app/tabs/tabs.page.html
+++ b/frontend/src/app/tabs/tabs.page.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab-bar slot="bottom" class="glass-tab-bar">
+  <ion-tab-bar slot="bottom" class="floating-tab-bar">
     <ion-tab-button tab="creator">
       <ion-icon name="add-circle"></ion-icon>
       <ion-label>Create</ion-label>
